# SRGL

./: .gitignore  Cargo.toml  LICENSE  README.md
example/simple2d/: Cargo.toml
example/simple2d/src/: main.rs
examples/simple-window/: Cargo.toml  README.md
examples/simple-window/src/: main.rs
examples/simple2d/: Cargo.toml  README.md
examples/simple2d/src/: main.rs
examples/sphere-rt/: Cargo.toml  README.md
examples/sphere-rt/src/: main.rs
src/: lib.rs  main.rs  render.rs  renderers.rs
src/render/: s2d.rs  s3d.rs
src/render/s2d/: mod.rs
src/render/s3d/: mod.rs
src/renderers/: s2d.rs  s3d.rs  srt.rs
src/renderers/s2d/: shape.rs
src/renderers/srt/: hit.rs  light.rs  objects.rs  ray.rs
src/s2d/: mod.rs
src/s3d/: mod.rs
